--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "keywords": [
     "eslint",
     "eslintplugin",
-    "eslint-plugin"
+    "eslint-plugin",
+    "photoshop",
+    "adobe",
+    "globals",
+    "environment"
   ],
   "author": {
     "name": "Stan Lindsey",
